# bmp180

./: CMakeLists.txt  LICENSE  README.md  bmp180.c  bmp180_calculate.c  bmp180_private.h  idf_component.yml
example/esp-idf/: CMakeLists.txt
example/esp-idf/main/: Kconfig.projbuild  idf_component.yml  main.c
example/linux/: CMakeLists.txt  main.c
include/: bmp180.h
include/bmp180/: bmp180.h  i2c_esp.h  i2c_linux.h
lib/: bmp180.c  bmp180_calculate.c  bmp180_private.h  esp-idf.c  helpers.h  i2c_private.h  linux.c
test/: CMakeLists.txt  main.c
